--- a/src/main/resources/assets/alltheores/lang/en_us.json
+++ b/src/main/resources/assets/alltheores/lang/en_us.json
@@ -1,12 +1,15 @@
 {
   "itemGroup.alltheores": "AllTheOres",
+  "item.alltheores.ore_hammer": "Ore Hammer",
   "item.alltheores.molten_aluminum_bucket": "Molten Aluminum Bucket",
   "item.alltheores.aluminum_ingot": "Aluminum Ingot",
   "item.alltheores.aluminum_nugget": "Aluminum Nugget",
   "item.alltheores.aluminum_dust": "Aluminum Dust",
+  "item.alltheores.raw_aluminum": "Raw Aluminum",
+  "block.alltheores.raw_aluminum_block": "Raw Aluminum Block",
   "block.alltheores.aluminum_block": "Aluminum Block",
   "block.alltheores.aluminum_ore": "Aluminum Ore",
-  "block.alltheores.aluminum_slate_ore": "Aluminum Ore",
+  "block.alltheores.aluminum_slate_ore": "Aluminum Slate Ore",
   "block.alltheores.other_aluminum_ore": "Other Aluminum Ore",
   "item.alltheores.molten_copper_bucket": "Molten Copper Bucket",
   "item.alltheores.copper_ingot": "Copper Ingot",
@@ -19,73 +22,123 @@
   "item.alltheores.lead_ingot": "Lead Ingot",
   "item.alltheores.lead_nugget": "Lead Nugget",
   "item.alltheores.lead_dust": "Lead Dust",
+  "item.alltheores.raw_lead": "Raw Lead",
+  "block.alltheores.raw_lead_block": "Raw Lead Block",
   "block.alltheores.lead_block": "Lead Block",
   "block.alltheores.lead_ore": "Lead Ore",
-  "block.alltheores.lead_slate_ore": "Lead Ore",
+  "block.alltheores.lead_slate_ore": "Lead Slate Ore",
   "block.alltheores.other_lead_ore": "Other Lead Ore",
   "item.alltheores.molten_nickel_bucket": "Molten Nickel Bucket",
   "item.alltheores.nickel_ingot": "Nickel Ingot",
   "item.alltheores.nickel_nugget": "Nickel Nugget",
   "item.alltheores.nickel_dust": "Nickel Dust",
+  "item.alltheores.raw_nickel": "Raw Nickel",
+  "block.alltheores.raw_nickel_block": "Raw Nickel Block",
   "block.alltheores.nickel_block": "Nickel Block",
   "block.alltheores.nickel_ore": "Nickel Ore",
-  "block.alltheores.nickel_slate_ore": "Nickel Ore",
+  "block.alltheores.nickel_slate_ore": "Nickel Slate Ore",
   "block.alltheores.other_nickel_ore": "Other Nickel Ore",
   "item.alltheores.molten_osmium_bucket": "Molten Osmium Bucket",
   "item.alltheores.osmium_ingot": "Osmium Ingot",
   "item.alltheores.osmium_nugget": "Osmium Nugget",
   "item.alltheores.osmium_dust": "Osmium Dust",
+  "item.alltheores.raw_osmium": "Raw Osmium",
+  "block.alltheores.raw_osmium_block": "Raw Osmium Block",
   "block.alltheores.osmium_block": "Osmium Block",
   "block.alltheores.osmium_ore": "Osmium Ore",
-  "block.alltheores.osmium_slate_ore": "Osmium Ore",
+  "block.alltheores.osmium_slate_ore": "Osmium Slate Ore",
   "block.alltheores.other_osmium_ore": "Other Osmium Ore",
   "item.alltheores.molten_platinum_bucket": "Molten Platinum Bucket",
   "item.alltheores.platinum_ingot": "Platinum Ingot",
   "item.alltheores.platinum_nugget": "Platinum Nugget",
   "item.alltheores.platinum_dust": "Platinum Dust",
+  "item.alltheores.raw_platinum": "Raw Platinum",
+  "block.alltheores.raw_platinum_block": "Raw Platinum Block",
   "block.alltheores.platinum_block": "Platinum Block",
   "block.alltheores.platinum_ore": "Platinum Ore",
-  "block.alltheores.platinum_slate_ore": "Platinum Ore",
+  "block.alltheores.platinum_slate_ore": "Platinum Slate Ore",
   "block.alltheores.other_platinum_ore": "Other Platinum Ore",
   "item.alltheores.molten_silver_bucket": "Molten Silver Bucket",
   "item.alltheores.silver_ingot": "Silver Ingot",
   "item.alltheores.silver_nugget": "Silver Nugget",
   "item.alltheores.silver_dust": "Silver Dust",
+  "item.alltheores.raw_silver": "Raw Silver",
+  "block.alltheores.raw_silver_block": "Raw Silver Block",
   "block.alltheores.silver_block": "Silver Block",
   "block.alltheores.silver_ore": "Silver Ore",
-  "block.alltheores.silver_slate_ore": "Silver Ore",
+  "block.alltheores.silver_slate_ore": "Silver Slate Ore",
   "block.alltheores.other_silver_ore": "Other Silver Ore",
   "item.alltheores.molten_tin_bucket": "Molten Tin Bucket",
   "item.alltheores.tin_ingot": "Tin Ingot",
   "item.alltheores.tin_nugget": "Tin Nugget",
   "item.alltheores.tin_dust": "Tin Dust",
+  "item.alltheores.raw_tin": "Raw Tin",
+  "block.alltheores.raw_tin_block": "Raw Tin Block",
   "block.alltheores.tin_block": "Tin Block",
   "block.alltheores.tin_ore": "Tin Ore",
-  "block.alltheores.tin_slate_ore": "Tin Ore",
+  "block.alltheores.tin_slate_ore": "Tin Slate Ore",
   "block.alltheores.other_tin_ore": "Other Tin Ore",
   "item.alltheores.molten_zinc_bucket": "Molten Zinc Bucket",
   "item.alltheores.zinc_ingot": "Zinc Ingot",
   "item.alltheores.zinc_nugget": "Zinc Nugget",
   "item.alltheores.zinc_dust": "Zinc Dust",
+  "item.alltheores.raw_zinc": "Raw Zinc",
+  "block.alltheores.raw_zinc_block": "Raw Zinc Block",
   "block.alltheores.zinc_block": "Zinc Block",
   "block.alltheores.zinc_ore": "Zinc Ore",
-  "block.alltheores.zinc_slate_ore": "Zinc Ore",
+  "block.alltheores.zinc_slate_ore": "Zinc Slate Ore",
   "block.alltheores.other_zinc_ore": "Other Zinc Ore",
   "item.alltheores.molten_uranium_bucket": "Molten Uranium Bucket",
   "item.alltheores.uranium_ingot": "Uranium Ingot",
   "item.alltheores.uranium_nugget": "Uranium Nugget",
   "item.alltheores.uranium_dust": "Uranium Dust",
+  "item.alltheores.raw_uranium": "Raw Uranium",
+  "block.alltheores.raw_uranium_block": "Raw Uranium Block",
   "block.alltheores.uranium_block": "Uranium Block",
   "block.alltheores.uranium_ore": "Uranium Ore",
-  "block.alltheores.uranium_slate_ore": "Uranium Ore",
+  "block.alltheores.uranium_slate_ore": "Uranium Slate Ore",
   "block.alltheores.other_uranium_ore": "Other Uranium Ore",
   "block.alltheores.other_coal_ore": "Other Coal Ore",
   "block.alltheores.other_iron_ore": "Other Iron Ore",
   "block.alltheores.other_lapis_ore": "Other Lapis Ore",
   "block.alltheores.other_redstone_ore": "Other Redstone Ore",
   "block.alltheores.other_diamond_ore": "Other Diamond Ore",
+  "block.alltheores.steel_block": "Steel Block",
+  "block.alltheores.invar_block": "Invar Block",
+  "block.alltheores.electrum_block": "Electrum Block",
+  "block.alltheores.bronze_block": "Bronze Block",
+  "block.alltheores.constantan_block": "Constantan Block",
+  "block.alltheores.enderium_block": "Enderium Block",
+  "block.alltheores.lumium_block": "Lumium Block",
+  "block.alltheores.signalum_block": "Signalum Block",
+  "item.alltheores.steel_nugget": "Steel Nugget",
+  "item.alltheores.invar_nugget": "Invar Nugget",
+  "item.alltheores.electrum_nugget": "Electrum Nugget",
+  "item.alltheores.bronze_nugget": "Bronze Nugget",
+  "item.alltheores.constantan_nugget": "Constantan Nugget",
+  "item.alltheores.enderium_nugget": "Enderium Nugget",
+  "item.alltheores.lumium_nugget": "Lumium Nugget",
+  "item.alltheores.signalum_nugget": "Signalum Nugget",
+  "item.alltheores.steel_ingot": "Steel Ingot",
+  "item.alltheores.invar_ingot": "Invar Ingot",
+  "item.alltheores.electrum_ingot": "Electrum Ingot",
+  "item.alltheores.bronze_ingot": "Bronze Ingot",
+  "item.alltheores.constantan_ingot": "Constantan Ingot",
+  "item.alltheores.enderium_ingot": "Enderium Ingot",
+  "item.alltheores.lumium_ingot": "Lumium Ingot",
+  "item.alltheores.signalum_ingot": "Signalum Nugget",
   "item.alltheores.gold_dust": "Gold Dust",
   "item.alltheores.iron_dust": "Iron Dust",
+  "item.alltheores.diamond_dust": "Diamond Dust",
+  "item.alltheores.netherite_dust": "Netherite Dust",
+  "item.alltheores.steel_dust": "Steel Dust",
+  "item.alltheores.invar_dust": "Invar Dust",
+  "item.alltheores.bronze_dust": "Bronze Dust",
+  "item.alltheores.constantan_dust": "Constantan Dust",
+  "item.alltheores.electrum_dust": "Electrum Dust",
+  "item.alltheores.enderium_dust": "Enderium Dust",
+  "item.alltheores.lumium_dust": "Lumium Dust",
+  "item.alltheores.signalum_dust": "Signalum Dust",
   "item.alltheores.dirty_aluminum_dust": "Dirty Aluminum Dust",
   "item.alltheores.dirty_copper_dust": "Dirty Copper Dust",
   "item.alltheores.dirty_lead_dust": "Dirty Lead Dust",
@@ -118,6 +171,58 @@
   "item.alltheores.tin_crystal": "Tin Crystal",
   "item.alltheores.uranium_crystal": "Uranium Crystal",
   "item.alltheores.zinc_crystal": "Zinc Crystal",
+  "item.alltheores.aluminum_gear": "Aluminum Gear",
+  "item.alltheores.copper_gear": "Copper Gear",
+  "item.alltheores.lead_gear": "Lead Gear",
+  "item.alltheores.osmium_gear": "Osmium Gear",
+  "item.alltheores.nickel_gear": "Nickel Gear",
+  "item.alltheores.platinum_gear": "Platinum Gear",
+  "item.alltheores.silver_gear": "Silver Gear",
+  "item.alltheores.tin_gear": "Tin Gear",
+  "item.alltheores.uranium_gear": "Uranium Gear",
+  "item.alltheores.zinc_gear": "Zinc Gear",
+  "item.alltheores.aluminum_plate": "Aluminum Plate",
+  "item.alltheores.copper_plate": "Copper Plate",
+  "item.alltheores.lead_plate": "Lead Plate",
+  "item.alltheores.osmium_plate": "Osmium Plate",
+  "item.alltheores.nickel_plate": "Nickel Plate",
+  "item.alltheores.platinum_plate": "Platinum Plate",
+  "item.alltheores.silver_plate": "Silver Plate",
+  "item.alltheores.tin_plate": "Tin Plate",
+  "item.alltheores.uranium_plate": "Uranium Plate",
+  "item.alltheores.zinc_plate": "Zinc Plate",
+  "item.alltheores.steel_plate": "Steel Plate",
+  "item.alltheores.invar_plate": "Invar Plate",
+  "item.alltheores.electrum_plate": "Electrum Plate",
+  "item.alltheores.bronze_plate": "Bronze Plate",
+  "item.alltheores.iron_plate": "Iron Plate",
+  "item.alltheores.gold_plate": "Gold Plate",
+  "item.alltheores.diamond_plate": "Diamond Plate",
+  "item.alltheores.enderium_plate": "Enderium Plate",
+  "item.alltheores.lumium_plate": "Lumium Plate",
+  "item.alltheores.signalum_plate": "Signalum Plate",
+  "item.alltheores.constantan_plate": "Constantan Plate",
+  "item.alltheores.aluminum_rod": "Aluminum Rod",
+  "item.alltheores.copper_rod": "Copper Rod",
+  "item.alltheores.lead_rod": "Lead Rod",
+  "item.alltheores.osmium_rod": "Osmium Rod",
+  "item.alltheores.nickel_rod": "Nickel Rod",
+  "item.alltheores.platinum_rod": "Platinum Rod",
+  "item.alltheores.silver_rod": "Silver Rod",
+  "item.alltheores.tin_rod": "Tin Rod",
+  "item.alltheores.uranium_rod": "Uranium Rod",
+  "item.alltheores.zinc_rod": "Zinc Rod",
+  "item.alltheores.steel_rod": "Steel Rod",
+  "item.alltheores.invar_rod": "Invar Rod",
+  "item.alltheores.electrum_rod": "Electrum Rod",
+  "item.alltheores.bronze_rod": "Bronze Rod",
+  "item.alltheores.iron_rod": "Iron Rod",
+  "item.alltheores.gold_rod": "Gold Rod",
+  "item.alltheores.diamond_rod": "Diamond Rod",
+  "item.alltheores.enderium_rod": "Enderium Rod",
+  "item.alltheores.lumium_rod": "Lumium Rod",
+  "item.alltheores.signalum_rod": "Signalum Rod",
+  "item.alltheores.constantan_rod": "Constantan Rod",
   "item.alltheores.aluminum_clump": "Aluminum Clump",
   "item.alltheores.copper_clump": "Copper Clump",
   "item.alltheores.lead_clump": "Lead Clump",
