--- a/src/main/resources/assets/alltheores/lang/en_us.json
+++ b/src/main/resources/assets/alltheores/lang/en_us.json
@@ -203,6 +203,17 @@
   "item.alltheores.tin_gear": "Tin Gear",
   "item.alltheores.uranium_gear": "Uranium Gear",
   "item.alltheores.zinc_gear": "Zinc Gear",
+  "item.alltheores.steel_gear": "Steel Gear",
+  "item.alltheores.invar_gear": "Invar Gear",
+  "item.alltheores.electrum_gear": "Electrum Gear",
+  "item.alltheores.bronze_gear": "Bronze Gear",
+  "item.alltheores.iron_gear": "Iron Gear",
+  "item.alltheores.gold_gear": "Gold Gear",
+  "item.alltheores.diamond_gear": "Diamond Gear",
+  "item.alltheores.enderium_gear": "Enderium Gear",
+  "item.alltheores.lumium_gear": "Lumium Gear",
+  "item.alltheores.signalum_gear": "Signalum Gear",
+  "item.alltheores.constantan_gear": "Constantan Gear",
   "item.alltheores.aluminum_plate": "Aluminum Plate",
   "item.alltheores.copper_plate": "Copper Plate",
   "item.alltheores.lead_plate": "Lead Plate",
