new textures, lang file fix

--- a/src/main/resources/assets/alltheores/lang/pt_br.json
+++ b/src/main/resources/assets/alltheores/lang/pt_br.json
@@ -309,7 +309,7 @@
   "slurry.alltheores.dirty_tin": "Polpa de Estanho Suja",
   "slurry.alltheores.clean_tin": "Polpa de Estanho Pura",
   "slurry.alltheores.dirty_zinc": "Polpa de Zinco Suja",
-  "slurry.alltheores.clean_zinc": "Polpa de Zinco Pura"
+  "slurry.alltheores.clean_zinc": "Polpa de Zinco Pura",
   "block.alltheores.ruby_block": "Bloco de Rubi",
   "block.alltheores.ruby_ore": "Minério de Rubi",
   "block.alltheores.ruby_slate_ore": "Minério de Rubi de ardósia",
