--- a/src/main/resources/assets/alltheores/lang/de_de.json
+++ b/src/main/resources/assets/alltheores/lang/de_de.json
@@ -49,21 +49,21 @@
     "block.alltheores.silver_block": "Silberblock",
     "block.alltheores.ore_silver": "Silbererz",
     "block.alltheores.ore_other_silver": "Other Silbererz",
-    "item.alltheores.molten_tin_bucket": "Molten Zinneimer",
+    "item.alltheores.molten_tin_bucket": "Flüssiger Zinneimer",
     "item.alltheores.tin_ingot": "Zinnbarren",
     "item.alltheores.tin_nugget": "Zinnstück",
     "item.alltheores.tin_dust": "Zinnstaub",
     "block.alltheores.tin_block": "Zinnblock",
     "block.alltheores.ore_tin": "Zinnerz",
     "block.alltheores.ore_other_tin": "Other Zinnerz",
-    "item.alltheores.molten_zinc_bucket": "Molten Zinkeimer",
+    "item.alltheores.molten_zinc_bucket": "Flüssiger Zinkeimer",
     "item.alltheores.zinc_ingot": "Zinkbarren",
     "item.alltheores.zinc_nugget": "Zinkstück",
     "item.alltheores.zinc_dust": "Zinkstaub",
     "block.alltheores.zinc_block": "Zinkblock",
     "block.alltheores.ore_zinc": "Zinkerz",
     "block.alltheores.ore_other_zinc": "Other Zinkerz",
-    "item.alltheores.molten_uranium_bucket": "Molten Uraneimer",
+    "item.alltheores.molten_uranium_bucket": "Flüssiger Uraneimer",
     "item.alltheores.uranium_ingot": "Uranbarren",
     "item.alltheores.uranium_nugget": "Uranstück",
     "item.alltheores.uranium_dust": "Uranstaub",
