--- a/src/main/resources/assets/alltheores/lang/ja_jp.json
+++ b/src/main/resources/assets/alltheores/lang/ja_jp.json
@@ -237,29 +237,29 @@
     "item.alltheores.lumium_gear": "ルミウムの歯車",
     "item.alltheores.signalum_gear": "シグナルムの歯車",
     "item.alltheores.constantan_gear": "コンスタンタンの歯車",
-    "item.alltheores.aluminum_plate": "アルミニウム板",
-    "item.alltheores.iridium_plate": "イリジウム板",
-    "item.alltheores.copper_plate": "銅板",
-    "item.alltheores.lead_plate": "鉛板",
-    "item.alltheores.osmium_plate": "オスミウム板",
-    "item.alltheores.nickel_plate": "ニッケル板",
-    "item.alltheores.platinum_plate": "プラチナ板",
-    "item.alltheores.silver_plate": "銀板",
-    "item.alltheores.tin_plate": "錫板",
-    "item.alltheores.uranium_plate": "ウラン板",
-    "item.alltheores.zinc_plate": "亜鉛板",
-    "item.alltheores.steel_plate": "鋼鉄板",
-    "item.alltheores.invar_plate": "インバー板",
-    "item.alltheores.electrum_plate": "エレクトラム板",
-    "item.alltheores.bronze_plate": "青銅板",
-    "item.alltheores.brass_plate": "真鍮板",
-    "item.alltheores.iron_plate": "鉄板",
-    "item.alltheores.gold_plate": "金板",
-    "item.alltheores.diamond_plate": "ダイヤモンド板",
-    "item.alltheores.enderium_plate": "エンダリウム板",
-    "item.alltheores.lumium_plate": "ルミウム板",
-    "item.alltheores.signalum_plate": "シグナルム板",
-    "item.alltheores.constantan_plate": "コンスタンタン板",
+    "item.alltheores.aluminum_plate": "アルミニウムの板",
+    "item.alltheores.iridium_plate": "イリジウムの板",
+    "item.alltheores.copper_plate": "銅の板",
+    "item.alltheores.lead_plate": "鉛の板",
+    "item.alltheores.osmium_plate": "オスミウムの板",
+    "item.alltheores.nickel_plate": "ニッケルの板",
+    "item.alltheores.platinum_plate": "プラチナの板",
+    "item.alltheores.silver_plate": "銀の板",
+    "item.alltheores.tin_plate": "錫の板",
+    "item.alltheores.uranium_plate": "ウランの板",
+    "item.alltheores.zinc_plate": "亜鉛の板",
+    "item.alltheores.steel_plate": "鋼鉄の板",
+    "item.alltheores.invar_plate": "インバーの板",
+    "item.alltheores.electrum_plate": "エレクトラムの板",
+    "item.alltheores.bronze_plate": "青銅の板",
+    "item.alltheores.brass_plate": "真鍮の板",
+    "item.alltheores.iron_plate": "鉄の板",
+    "item.alltheores.gold_plate": "金の板",
+    "item.alltheores.diamond_plate": "ダイヤモンドの板",
+    "item.alltheores.enderium_plate": "エンダリウムの板",
+    "item.alltheores.lumium_plate": "ルミウムの板",
+    "item.alltheores.signalum_plate": "シグナルムの板",
+    "item.alltheores.constantan_plate": "コンスタンタンの板",
     "item.alltheores.aluminum_rod": "アルミニウムの棒",
     "item.alltheores.iridium_rod": "イリジウムの棒",
     "item.alltheores.copper_rod": "銅の棒",
